tests/error/comptime/pointer_difference19.bz
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc([int32, int32], 1);
		defer __builtin_comptime_free(p);
		__builtin_inplace_construct(p, [int32, int32]());

		const lhs = &(*p)[0] + 1;
		const rhs = &(*p)[0];
		__builtin_destruct_value(*p);

		lhs - rhs;
	});
}
